manifests/arr-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: media-arr
    namespace: media
    labels:
      app: media-arr
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: media-arr
    template:
      metadata:
        labels:
          app: media-arr
      spec:
        securityContext:
          fsGroup: 1000
        containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:latest
          ports:
          - containerPort: 8989
          volumeMounts:
          - name: sonarr-config
            mountPath: /config
          - name: content
            mountPath: /tv
            subPath: tv
          - name: qbittorrent-data
            mountPath: /downloads
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
          - containerPort: 8686
          volumeMounts:
          - name: content
            mountPath: /music
            subPath: music
          - name: lidarr-config
            mountPath: /config
          - name: qbittorrent-data
            mountPath: /downloads
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
          - containerPort: 7878
          volumeMounts:
          - name: content
            mountPath: /movies
            subPath: movies
          - name: radarr-config
            mountPath: /config
          - name: qbittorrent-data
            mountPath: /downloads
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
          - containerPort: 9696
          volumeMounts:
          - name: prowlarr-config
            mountPath: /config
        volumes:
        - name: content
          persistentVolumeClaim:
            claimName: content-pvc
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
