manifests/wireguard.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: media
    namespace: media
    labels:
      app: media
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: media
    template:
      metadata:
        labels:
          app: media
      spec:
        containers:
        - name: wireguard
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          livenessProbe:
            exec:
              command:
              - /gluetun-entrypoint
              - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:latest
          volumeMounts:
          - name: sonarr-data
            mountPath: /config
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          volumeMounts:
          - name: lidarr-data
            mountPath: /config
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          volumeMounts:
          - name: radarr-data
            mountPath: /config
        - name: readarr
          image: lscr.io/linuxserver/readarr:develop
          volumeMounts:
          - name: readarr-data
            mountPath: /config
        volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: lidarr-data
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: radarr-data
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: readarr-data
          persistentVolumeClaim:
            claimName: readarr-pvc
