manifests/qbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-qbit-service
  namespace: media
spec:
  selector:
    app: media-qbit
  ports:
    - name: qbittorrent
      port: 8080
      targetPort: 8080
